--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			</section>
 		</main>
 		<footer>
-			Stronę internetową opracował: <b>Jan Kupczyk</b>
+			Stronę internetową opracował: <b>Paweł Gołab</b>
 		</footer>
 	</body>
 
