--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 				var suma = liczba * 2;
 				if (check.checked) {
 					wynik.innerHTML = "Dowieziemy Twoją pizzę za darmo";
-				} else if (check).checked === false) {
+				} else if (check.checked === false) {
 					wynik.innerHTML = "Dowóz będzie Cię kosztował " + suma + " złotych";
 				}
 			}
