--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 			</h2>
 		</header>
 		<main>
-			<section id="pl">
+			<section id="lewy">
 				<p>U nas zamówisz pizzę z dowozem </p>
 				<a href="logo.png">Nasze logo</a>
 			</section>
-			<section id="ps">
+			<section id="srodkowy">
 				<h3>Pizzeria Margherita</h3>
 				<p>ul. Botaniczna 4, Zielona Góra</p>
 			</section>
-			<section id="pp">
+			<section id="prawy">
 				<h3>Oferta</h3>
 				<ol>
 					<li>Pizza</li>
@@ -41,7 +41,7 @@
 				</ol>
 				<p><a href="Oferta.txt">Pobiersz pełną ofertę</a></p>
 			</section>
-			<section id="pd">
+			<section id="stopka">
 				<h3>Oblicz koszt dostawy</h3>
 				<input type="checkbox" id="check">Jestem z Zielonej Góry <br>
 				<p>albo</p>
