--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				</ol>
 				<p><a href="Oferta.txt">Pobiersz pełną ofertę</a></p>
 			</section>
-			<section id="stopka">
+			<section id="dolny">
 				<h3>Oblicz koszt dostawy</h3>
 				<input type="checkbox" id="check">Jestem z Zielonej Góry <br>
 				<p>albo</p>
