--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<p id="wynik"></p>
 			</section>
 		</main>
-		<footer>
+		<footer id="stopka">
 			Stronę internetową opracował: <b>Paweł Gołab</b>
 		</footer>
 	</body>
