--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</head>
 
 	<body>
-		<header>
+		<header id="baner">
 			<h2>Najlepsza pizza w mieście
 				<img src="logo.png" height="100">
 			</h2>
